--- a/public/style-b.css
+++ b/public/style-b.css
@@ -94,6 +94,17 @@ body, .body-bg{
 
 .dropdown:hover > .dropdown-content {
 	display: block;
+  animation: fadeIn 0.25s;
+}
+
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:0.8;}
+}
+
+@keyframes fadeOut {
+  0% {opacity:0.8;}
+  100% {opacity:0;}
 }
 
 .bg-black-200 {
@@ -245,4 +256,37 @@ textarea::placeholder {
   ::-webkit-scrollbar-thumb:hover {
     background: #555; 
   }
+
+  .icon-font {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 45px;
+  }
+
+  .icon-fade{
+    color: #fff;
+    position: absolute;
+    margin-top: -36.3px;
+    margin-left: -5px;
+    z-index: 10;
+    font-weight: 600;
+    background: linear-gradient(to right,rgb(248, 255, 123) 10%, #89d6ff 40%, rgb(86, 159, 255) 50%);
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: textclip 6.8s linear infinite;
+  }
+  @keyframes textclip {
+    to {
+      background-position: 200% center;
+    }
+  }
+
+  .menu-white-mode{
+    background-color: rgba(229, 231, 235, 0);
+  }
+
+
+
 
