--- a/public/style-b.css
+++ b/public/style-b.css
@@ -288,6 +288,7 @@ textarea::placeholder {
   margin-top: -39.4px;
 }
 
+
 .counter, .reset, .themes, .minus {
     background-color: #ffffff21;
     display: flex;
@@ -546,6 +547,71 @@ animation: bounce 2s ease infinite .5s, color-change 4s infinite;
 .d {
 animation: bounce 2s ease infinite .6s, color-change 4.4s infinite;
 }
+
+.form-text-md{
+  font-size: 17.5px;
+}
+.font-form{
+  background-color: rgba(255, 255, 255, 0.522);
+  color: rgba(24, 24, 24, 0.987);
+  border-radius: 4px;
+  border-color: rgba(24, 24, 24, 0.159);
+  border-width: 2px;
+  box-shadow: 1px 1px 3px rgba(53, 53, 53, 0.063);
+}
+.font-form-light{
+  background-color: rgba(255, 255, 255, 0.522);
+  color: rgba(90, 90, 90, 0.987);
+}
+.font-form-dark{
+  background-color: rgba(45, 56, 75, 0.789);
+  color: rgba(225, 225, 225, 0.624);
+  border-color: rgba(155, 155, 155, 0.124);
+  border-width: 2px;
+}
+.font-form-dark::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: rgba(204, 204, 204, 0.207);
+  opacity: 1; /* Firefox */
+}
+.font-form-light::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: rgba(90, 90, 90, 0.433);
+  opacity: 1; /* Firefox */
+}
+.form-submit-slide-default{
+  color: rgb(230, 230, 230);
+  background-color: rgb(35, 108, 202);
+  border-radius: 8px;
+}
+.form-submit-slide{
+  padding: 18px 36px;
+  display: inline-block;
+  font-size: 14px;
+  letter-spacing: 1px;
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0 rgba(82, 255, 67, 0.261);
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
+
+}
+.form-submit-left:active {
+  box-shadow: inset 400px 0 0 0 rgb(45, 181, 32);
+}
+
+
+
+
+.form-submit-dark{
+  color: rgba(28, 34, 46, 0.946);
+  background-color: rgb(255, 210, 63);
+}
+.form-submit-dark:hover {
+  background-color: rgb(255, 232, 141);
+}
+
+
+
+
 
 
 
