--- a/public/style-b.css
+++ b/public/style-b.css
@@ -489,7 +489,7 @@ textarea::placeholder {
   .bouncing-text {
     position: absolute;
     margin-top: -32.1px;
-    margin-left: 360px;
+    margin-left: 340px;
     display: flex;
     font-size: 20px;
     font-weight: 600;
@@ -548,6 +548,12 @@ animation: bounce 2s ease infinite .5s, color-change 4s infinite;
 animation: bounce 2s ease infinite .6s, color-change 4.4s infinite;
 }
 
+.help-header-text-1{
+  font-size: 34px;
+}
+.help-header-text-2{
+  font-size: 27px;
+}
 .form-text-md{
   font-size: 17.5px;
 }
