--- a/public/style-b.css
+++ b/public/style-b.css
@@ -136,7 +136,66 @@ body, .cork-bg-img{
   opacity: 90%;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 60%);
   z-index: 1;
+
 }
+
+.panel-modern {
+  position: absolute;
+  background-color: rgba(255, 234, 114, 0.85);
+  text-align: center;
+
+  border-width: 6px;
+  border-color: rgba(0, 0, 0, 0.159);
+  border-style: outset;
+  border-radius: 6px;
+
+  width: 320px;
+  height: 274px;
+  opacity: 75%;
+  box-shadow: 0px 0px 10px rgba(33, 33, 33, 0.679);
+  z-index: 1;
+  border-radius: 10px 10px 0px 0px;
+  backdrop-filter: blur(5px);
+}
+
+.panel-neon {
+  position: absolute;
+  background-color: rgba(55, 55, 55, 0.07);
+  text-align: center;
+  width: 320px;
+  height: 274px;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+  opacity: 70%;
+  box-shadow: 0px 0px 33px rgb(255, 217, 0);
+  z-index: 1;
+  backdrop-filter: blur(3.5px);
+  -webkit-backdrop-filter: blur(3.5px);
+  border-width: 4px;
+  border-color: rgba(255, 234, 114, 0.898);
+  border-style:solid;
+  border-radius: 8px;
+}
+
+.panel-glass {
+  position: absolute;
+  background-color: rgba(255, 234, 114, 0.296);
+  text-align: center;
+  width: 320px;
+  height: 274px;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+  opacity: 70%;
+  box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.193);
+  z-index: 1;
+  backdrop-filter: blur(3.5px);
+  -webkit-backdrop-filter: blur(3.5px);
+  border-width: 1px;
+  border-color: rgba(67, 67, 67, 0.234);
+  border-style:solid;
+  border-radius: 8px;
+}
+
 .panel-twitter {
     position: absolute;
     background-color: #ffde5a;
@@ -154,7 +213,7 @@ body, .cork-bg-img{
   padding: 5px;
   cursor: move;
   background-color: rgba(0, 0, 0, 12%);
-  color: rgb(0, 0, 0);
+  color: rgba(0, 0, 0, 0.693);
 }
 
 .mediapanel {
@@ -631,10 +690,6 @@ animation: bounce 2s ease infinite .6s, color-change 4.4s infinite;
 .form-submit-left:active {
   box-shadow: inset 400px 0 0 0 rgb(45, 181, 32);
 }
-
-
-
-
 .form-submit-dark{
   color: rgba(28, 34, 46, 0.946);
   background-color: rgb(255, 210, 63);
@@ -642,6 +697,9 @@ animation: bounce 2s ease infinite .6s, color-change 4.4s infinite;
 .form-submit-dark:hover {
   background-color: rgb(255, 232, 141);
 }
+
+.
+
 
 
 
