--- a/public/style-b.css
+++ b/public/style-b.css
@@ -67,7 +67,6 @@ body, .cork-bg-img{
   background-image: radial-gradient( circle farthest-corner at 50% 50%,  rgb(255, 34, 0) 0%, rgb(255, 136, 0) 15%, rgb(255, 208, 0) 30%, rgb(58, 255, 28) 50%, rgb(27, 122, 255) 60%, rgb(43, 0, 234) 70%, rgb(98, 0, 234) 80%, rgb(172, 0, 234) 90%);
  }
 
-
 .non-click{
     pointer-events:none;
 }
@@ -175,21 +174,55 @@ body, .cork-bg-img{
 
 .panel-neon {
   position: absolute;
-  background-color: rgba(55, 55, 55, 0.07);
+  background-color: rgba(255, 234, 114, 0.85);
   text-align: center;
   width: 320px;
   height: 274px;
   border-top-left-radius: 7px;
   border-top-right-radius: 7px;
   opacity: 70%;
-  box-shadow: 0px 0px 33px rgb(255, 217, 0);
+  box-shadow: 0px 0px 30px rgb(255, 217, 0);
   z-index: 1;
   backdrop-filter: blur(3.5px);
   -webkit-backdrop-filter: blur(3.5px);
   border-width: 4px;
-  border-color: rgba(255, 234, 114, 0.898);
   border-style:solid;
   border-radius: 8px;
+  animation: neonglow 30s infinite ease;
+}
+@keyframes neonglow {
+  0% {
+    box-shadow: 0px 0px 32px rgb(255, 106, 0);
+    border-color: rgb(255, 106, 0);
+  }
+  15% {
+    box-shadow: 0px 0px 32px rgb(255, 170, 0);
+    border-color: rgb(255, 170, 0);
+  }
+  30% {
+    box-shadow: 0px 0px 32px rgb(208, 255, 0);
+    border-color: rgb(208, 255, 0);
+  }
+  45% {
+    box-shadow: 0px 0px 32px rgb(0, 183, 255);
+    border-color: rgb(0, 183, 255);
+  }
+  60% {
+    box-shadow: 0px 0px 30px rgb(0, 4, 255);
+    border-color: rgb(51, 0, 255);
+  }
+  75% {
+    box-shadow: 0px 0px 30px rgb(102, 0, 255);
+    border-color: rgb(102, 0, 255);
+  }
+  90% {
+    box-shadow: 0px 0px 30px rgb(255, 0, 212);
+    border-color: rgb(255, 0, 212);
+  }
+  100% {
+    box-shadow: 0px 0px 30px rgb(255, 0, 8);
+    border-color: rgb(255, 0, 8);
+  }
 }
 
 .panel-glass {
